--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@module-federation/nextjs-mf": "^8.6.3",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
-    "jsvectormap": "^1.5.3",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-apexcharts": "^1.4.1",
